First couple weeks of porting progress...